# GenussFold

./: .buildbot-devel  .drone.yml  .gitignore  .mrconfig  .travis.yml  ADPfusionSubword.cabal  DPutils.cabal  ForestStructures.cabal  GenusFold.cabal  GenussFold.cabal  LICENSE  OrderedBits.cabal  README.md  bimaps.cabal  cabal.project  changelog  changelog.md  default.nix  devel-stack.yaml  develop.project  flake.nix  hie.yaml  nightly-stack.yaml  package.nix  shell.nix  stack.yaml  static.nix
ADP/Fusion/: Subword.hs
ADP/Fusion/Core/: Subword.hs
ADP/Fusion/Subword/: Core.hs
ADP/Fusion/Subword/SynVar/: Indices.hs
ADP/Fusion/Subword/Term/: Chr.hs  Deletion.hs  Epsilon.hs  Str.hs
ADP/Fusion/SynVar/Array/TermSymbol/: Subword.hs
ADP/Fusion/SynVar/Indices/: Subword.hs
ADP/Fusion/SynVar/Recursive/: Subword.hs
ADP/Fusion/SynVar/Split/: Subword.hs
ADP/Fusion/Term/Chr/: Subword.hs
ADP/Fusion/Term/Deletion/: Subword.hs
ADP/Fusion/Term/Epsilon/: Subword.hs
ADP/Fusion/Term/PeekIndex/: Subword.hs
ADP/Fusion/Term/Strng/: Subword.hs
ADPfusion/: Subword.hs
ADPfusion/Subword/: Core.hs  SynVar.hs
ADPfusion/Subword/SynVar/: Split.hs
ADPfusion/Subword/Term/: Chr.hs  Deletion.hs  Epsilon.hs  Str.hs
ADPfusion/SynVar/Array/TermSymbol/: Subword.hs
ADPfusion/SynVar/Recursive/: Subword.hs
ADPfusion/SynVar/Split/: Subword.hs
ADPfusion/Term/PeekIndex/: Subword.hs
ADPfusion/Term/Strng/: Subword.hs
BioInf/: GenusFold.hs  GenussFold.hs
BioInf/GenusFold/: PseudoNussinov.hs
BioInf/GenussFold/: PKN.hs
BioInf/GenussFold/PKN/: Grammar.hs
C/: genussfold-main.c  genussfold.c
DP/Backtraced/: Core.hs
Data/Bijection/: Class.hs  Hash.hs  HashMap.hs  Map.hs  Vector.hs
Data/Bijection/Vector/: Storable.hs  Unboxed.hs
Data/Bits/: Ordered.hs
Data/Bits/Ordered/: QuickCheck.hs
Data/ByteString/Streaming/: Split.hs
Data/Combined/: Common.hs  Foldable.hs  Vector.hs
Data/Forest/: Static.hs  StructuredPaired.hs
Data/Paired/: Common.hs  Foldable.hs
Data/Tree/: Static.hs
Data/Vector/: Combined.hs
Math/: TriangularNumbers.hs
Pipes/Split/: ByteString.hs
bench/: Benchmark.hs
lib/DP/Backtraced/: Core.hs
lib/Data/: Info.hs
lib/Data/Attoparsec/ByteString/: Streaming.hs
lib/Data/Bijection/: Class.hs  Map.hs
lib/Data/Bijection/Vector/: Storable.hs
lib/Data/Bits/: Ordered.hs
lib/Data/ByteString/Streaming/: Split.hs
lib/Data/Char/: Util.hs
lib/Data/Ord/: Fast.hs
lib/Data/Paired/: Foldable.hs  Vector.hs
lib/Data/Vector/Generic/: Unstream.hs
lib/Pipes/: Parallel.hs
lib/Streaming/: Primitive.hs
src/: Benchmark.hs  Benchmarks.hs  GenusFold.hs  GenussFold.hs  Nussinov.hs  PartNussinov.hs  Pseudoknot.hs
tests/: Benchmark.hs  QuickCheck.hs  SmallCheck.hs  benchmark.hs  haskell-c-impl.hs  properties-fast.hs  properties.hs  streaming.hs
tests/QuickCheck/: Subword.hs
