name:           ADPfusionSubword
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2016-2019
copyright:      Christian Hoener zu Siederdissen, 2016-2019
homepage:       https://github.com/choener/ADPfusionSubword
bug-reports:    https://github.com/choener/ADPfusionSubword/issues
maintainer:     choener@bioinf.uni-leipzig.de
category:       Algorithms, Data Structures, Bioinformatics, Formal Languages
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 8.6.4
synopsis:       Efficient, high-level dynamic programming for CFGs on strings
description:
                <http://www.bioinf.uni-leipzig.de/Software/gADP/ generalized Algebraic Dynamic Programming>
                .
                .



Extra-Source-Files:
  README.md
  changelog.md



flag examples
  description:  build the examples
  default:      False
  manual:       True

flag debugdump
  description:  dump intermediate Core files
  default:      False
  manual:       True

flag llvm
  description:  use llvm
  default:      False
  manual:       True



library
  build-depends: base               >= 4.7    &&  < 5.0
               , bits               >= 0.4
               , containers
               , mmorph             >= 1.0
               , mtl                >= 2.0
               , primitive          >= 0.5.4
               , QuickCheck         >= 2.7
               , strict             >= 0.3
               , template-haskell   >= 2.0
               , th-orphans         >= 0.12
               , transformers       >= 0.3
               , tuple              >= 0.3
               , vector             >= 0.11
               --
               , ADPfusion          == 0.6.0.*
               , DPutils            == 0.1.0.*
               , OrderedBits        == 0.0.2.*
               , PrimitiveArray     == 0.9.1.*

  exposed-modules:
    ADP.Fusion.Subword
    ADP.Fusion.Subword.Core
    ADP.Fusion.Subword.SynVar.Indices
    ADP.Fusion.Subword.Term.Chr
    ADP.Fusion.Subword.Term.Deletion
    ADP.Fusion.Subword.Term.Epsilon
    ADP.Fusion.Subword.Term.Str
--    ADP.Fusion.SynVar.Array.TermSymbol.Subword
--    ADP.Fusion.SynVar.Recursive.Subword
--    ADP.Fusion.SynVar.Split.Subword
--    ADP.Fusion.Term.PeekIndex.Subword
--    ADP.Fusion.Term.Strng.Subword

  default-extensions: BangPatterns
                    , ConstraintKinds
                    , CPP
                    , DataKinds
                    , DefaultSignatures
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , KindSignatures
                    , MagicHash
                    , MultiParamTypeClasses
                    , PolyKinds
                    , RankNTypes
                    , RecordWildCards
                    , ScopedTypeVariables
                    , StandaloneDeriving
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
                    , UndecidableInstances
                    , UnicodeSyntax

  default-language:
    Haskell2010
  ghc-options:
    -O2 -funbox-strict-fields



source-repository head
  type: git
  location: git://github.com/choener/ADPfusionSubword

