Name:           DPutils
Version:        0.0.0.1
License:        BSD3
License-file:   LICENSE
Maintainer:     choener@bioinf.uni-leipzig.de
author:         Christian Hoener zu Siederdissen, 2016
copyright:      Christian Hoener zu Siederdissen, 2016
homepage:       https://github.com/choener/DPutils
bug-reports:    https://github.com/choener/DPutils/issues
Stability:      Experimental
Category:       Data
Build-type:     Simple
Cabal-version:  >=1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.3
Synopsis:       utilities for DP
Description:
                Small set of utility functions
                .



extra-source-files:
  README.md
  changelog.md



Library
  Exposed-modules:
    Data.Vector.Combined
  build-depends: base                     >= 4.7
               , QuickCheck               >= 2.7
               , vector                   >= 0.10
  default-extensions: BangPatterns
                    , ScopedTypeVariables
                    , FlexibleContexts
  default-language:
    Haskell2010
  ghc-options:
    -O2
    -funbox-strict-fields



test-suite properties
  type:
    exitcode-stdio-1.0
  main-is:
    properties.hs
  ghc-options:
    -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:
    tests
  default-language:
    Haskell2010
  default-extensions: CPP
                    , TemplateHaskell
  build-depends: base
               , DPutils
               , QuickCheck
               , tasty              >= 0.11
               , tasty-quickcheck   >= 0.8
               , tasty-th           >= 0.1
               , vector



source-repository head
  type: git
  location: git://github.com/choener/DPutils

