name:           GenusFold
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen, 2015
copyright:      Christian Hoener zu Siederdissen, 2015
homepage:       https://github.com/choener/GenusFold
bug-reports:    https://github.com/choener/GenusFold/issues
maintainer:     choener@bioinf.uni-leipzig.de
category:       Formal Languages, Bioinformatics
license:        GPL-3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.10.0
tested-with:    GHC == 7.8.4, GHC == 7.10.1
synopsis:       MCFG for Genus-1 RNA Pseudoknots
description:
                Genus-1 RNA pseudoknots implemented with a multi-context free
                language.



Extra-Source-Files:
  README.md
  changelog.md



flag llvm
  description:  build using LLVM
  default:      False
  manual:       True

flag debug
  description:  dump intermediate Core files
  default:      False
  manual:       True



library
  build-depends: base                   >= 4.7    && < 4.9
               , ADPfusion              >= 0.4.0  && < 0.4.1
               , ansi-wl-pprint         >= 0.6.7  && < 0.6.8
               , BiobaseTurner          >= 0.3.2  && < 0.3.3
               , bytestring             >= 0.10   && < 0.11
               , containers
               , data-default           >= 0.5    && < 0.6
               , FormalGrammars         >= 0.2.1  && < 0.2.2
               , lens                   >= 4.0    && < 5.0
               , mtl                    >= 2.0    && < 3.0
               , PrimitiveArray         >= 0.6.0  && < 0.6.2
               , semigroups             >= 0.16   && < 0.17
               , template-haskell
               , text                   >= 1.0    && < 1.3
               , transformers           >= 0.3    && < 0.5
               , unordered-containers   >= 0.2    && < 0.3
               , vector                 >= 0.10   && < 0.11
  exposed-modules:
    BioInf.GenusFold
  default-language:
    Haskell2010
  default-extensions: BangPatterns
                    , DeriveDataTypeable
  ghc-options:
    -O2 -funbox-strict-fields



-- Wrapper for the library

executable GenusFold
  build-depends: base
               , cmdargs          >= 0.10   && < 0.11
               , FormalGrammars
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions: DeriveDataTypeable
                    , RecordWildCards
  main-is:
    GenusFold.hs
  ghc-options:
    -O2
    -funbox-strict-fields
  if flag(debug)
    ghc-options:
      -ddump-to-file
      -ddump-simpl
      -ddump-stg
      -dsuppress-all
  if flag(llvm)
    ghc-options:
      -fllvm
      -optlo-O3 -optlo-std-compile-opts
      -fllvm-tbaa



source-repository head
  type: git
  location: git://github.com/choener/GenusFold

