name:           OrderedBits
version:        0.0.0.1
author:         Christian Hoener zu Siederdissen
copyright:      Christian Hoener zu Siederdissen, 2014 - 2015
homepage:       http://www.bioinf.uni-leipzig.de/~choener/
maintainer:     choener@tbi.univie.ac.at
category:       Data
license:        BSD3
license-file:   LICENSE
build-type:     Simple
stability:      experimental
cabal-version:  >= 1.8.0
synopsis:
                Efficient ordered (by popcount) enumeration of bits
description:
                This library provides efficient methods to enumerate all
                elements of a set in order of the population count. First, the
                empty set, then all 1-element sets, all 2-element sets, etc.
                Such enumerations are important for algorithms over unordered
                data sets. Examples include the travelling salesman problem and
                the closely related Hamiltonian path problem.



Extra-Source-Files:

flag benchmark
  description:  enable criterion benchmarking
  default:      False
  manual:       True

flag llvm
  description:  build using LLVM
  default:      False
  manual:       True

library
  build-depends:  base              >= 4.7      && < 4.9
               ,  bits              == 0.4.*
               ,  primitive         == 0.5.*
               ,  QuickCheck        >= 2.7      && < 2.9
               ,  vector            == 0.10.*
               ,  vector-algorithms == 0.6.*
  exposed-modules:
    Data.Bits.Ordered
    Data.Bits.Ordered.QuickCheck
  ghc-options:
    -O2 -funbox-strict-fields

executable BenchmarkOrderedBits
  if flag(benchmark)
    buildable:
      True
    build-depends:  base
                 ,  criterion   >=  1.0.2 && < 1.1.1
                 ,  OrderedBits
                 ,  vector
  else
    buildable: False
  hs-source-dirs:
    src
  main-is:
    Benchmark.hs
  ghc-options:
    -O2
    -funbox-strict-fields
  if flag(llvm)
    ghc-options:
      -fllvm
      -optlo-O3 -optlo-std-compile-opts
      -fllvm-tbaa

source-repository head
  type: git
  location: git://github.com/choener/OrderedBits

