Name:           bimaps
Version:        0.0.0.1
License:        BSD3
License-file:   LICENSE
Author:         Christian Hoener zu Siederdissen
Maintainer:     choener@tbi.univie.ac.at
Copyright:      Christian Hoener zu Siederdissen, 2014
Homepage:       http://www.tbi.univie.ac.at/~choener/
Stability:      Experimental
Category:       Data
Build-type:     Simple
Cabal-version:  >=1.8
Synopsis:
                bijections with multiple implementations.
Description:
                Bijections between sets of values.

extra-source-files:
  changelog.md
  README.md

flag examples
  description:  build the examples
  default:      False
  manual:       True

flag llvm
  description:  build using LLVM
  default:      False
  manual:       True

library
  exposed-modules:
    Data.Bijection.Class
    Data.Bijection.Hash
    Data.Bijection.Map
    Data.Bijection.Vector
    Data.Bijection.Vector.Unboxed
    Data.Bijection.Vector.Storable
  build-depends:
    aeson                   == 0.8.*    ,
    binary                  == 0.7.*    ,
    cereal                  == 0.4.*    ,
    containers              == 0.5.*    ,
    deepseq                 == 1.3.*    ,
    hashable                == 1.2.*    ,
    primitive               == 0.5.*    ,
    QuickCheck              == 2.*      ,
    repa                    == 3.3.*    ,
    storable-tuple          == 0.0.2    ,
    unordered-containers    == 0.2.5.*  ,
    vector                  == 0.10.*   ,
    vector-binary-instances == 0.2.*    ,
    vector-th-unbox         == 0.2.*    ,
    base                    == 4.*
  ghc-options:
    -O2
    -funbox-strict-fields

executable Benchmark
  if flag(examples)
    buildable: True
    build-depends:
      bimaps                  ,
      criterion   == 1.0.2.*  ,
      deepseq                 ,
      mwc-random  == 0.13.*   ,
      vector                  ,
      base
  else
    buildable: False
  hs-source-dirs:
    src
  main-is:
    Benchmark.hs
  ghc-options:
    -O2
    -funbox-strict-fields
    -funfolding-use-threshold1000
    -funfolding-keeness-factor1000
  if flag(llvm)
    ghc-options:
      -fllvm
      -optlo-O3 -optlo-std-compile-opts
      -fllvm-tbaa


source-repository head
  type: git
  location: git://github.com/choener/PrimitiveArray

